--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "antd": "^5.15.1",
+    "axios": "^1.6.7",
+    "jwt-decode": "^4.0.0",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18"
